# cryptokiddie

./: LICENSE.md  README.md  setup.cfg  setup.py
aes/: cbc_bit_flipping.py  cbc_cca.py
classic/: shift_decrypt.py  shift_encrypt.py
rsa/: boneh_durfee.sage  coppersmith.sage  wiener.py
