[metadata]
name = cryptokiddie
version = 0.0.1
description = A library for automating CTF crypto challenges
long_description = file: README.md
long_description_content_type = text/markdown
author = Chenyang Yu (@ret2basic)
author_email = ret2basic@pwnieisland.com
python_requires = >=3.5.0
url = "https://github.com/ret2basic/cryptokiddie"
py_modules = cryptokiddie
include_package_data = true
license = MIT
classifiers = 
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Security :: Cryptography